Bug 1231017 - Always restore flowed message upon forward. r=mkmelin